--- a/STM32F103_LCD_ADF4351.vcxproj.filters
+++ b/STM32F103_LCD_ADF4351.vcxproj.filters
@@ -290,6 +290,12 @@
     <ClInclude Include="C:\Users\jluu\AppData\Local\VisualGDB\EmbeddedBSPs\arm-eabi\com.sysprogs.arm.stm32\STM32F1xxxx\CMSIS_HAL\RTOS\Template\cmsis_os.h">
       <Filter>Header files\Device-specific files\HAL</Filter>
     </ClInclude>
+    <ClInclude Include="Inc\FrameWinDLGReference.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\FrameWinDLGMain.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\adc.c">
@@ -478,7 +484,13 @@
     <ClCompile Include="Src\FramewinDLGSweeper.c">
       <Filter>Source files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\jluu\AppData\Local\VisualGDB\EmbeddedBSPs\arm-eabi\com.sysprogs.arm.stm32\STM32F1xxxx\StartupFiles\startup_stm32f103xb.c">
+    <ClCompile Include="Src\FramewinDLGMain.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\FramewinDLGReference.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="C:\Users\jluu\AppData\Local\VisualGDB\EmbeddedBSPs\arm-eabi\com.sysprogs.arm.stm32\STM32F1xxxx\StartupFiles\startup_stm32f103xe.c">
       <Filter>Source files\Device-specific files</Filter>
     </ClCompile>
   </ItemGroup>
